# solanaProject

./: README.md
account/: Anchor.toml  package-lock.json
account/tests/: account.ts
anchor-new/redeem/: Anchor.toml
anchor-new/token-factory/: Anchor.toml  tsconfig.json
anchor-new/worker-verifier-stake/: Anchor.toml
anchor-prod/: noPchTDZZTbY66SvBoSeKkQgYjyu2WcFMiGP9FT97bA.json
anchor-prod/redeem/: Anchor.toml
curd-app/: Anchor.toml  bosjEJVuNzcZmKVwNcZHaxuaRWfJEt5KjFZQUFf7ir7.json
default-account-satte/: Anchor.toml  package-lock.json
escrow/: Anchor.toml
immutable_owner/: Anchor.toml  package-lock.json
interest-bearing/: Anchor.toml  package-lock.json
interest-bearing/programs/interest-bearing/: Cargo.toml
interest-bearing/programs/interest-bearing/src/: lib.rs
memo-transfer/: Anchor.toml  package-lock.json  package.json
metadata/: Anchor.toml  package-lock.json  package.json
metadata/programs/metadata/: Cargo.toml
metadata/programs/metadata/src/: lib.rs
metadata/programs/metadata/src/instructions/: emit.rs  initialize.rs  mod.rs  remove_key.rs  update_authority.rs  update_field.rs
mint-token/: Anchor.toml  bosjEJVuNzcZmKVwNcZHaxuaRWfJEt5KjFZQUFf7ir7.json  package-lock.json
my-project/: Anchor.toml
new-token/: Hzqaq  Nebh2LXB96LgPSAfyYRHX4yuxJiHSFePg6Mu2erVFCQ.json  NebjGd7mU81D1y6H6vQbgKEgVHETpzKdcsAD7XkModD.json  bosjEJVuNzcZmKVwNcZHaxuaRWfJEt5KjFZQUFf7ir7.json  hzQomgBUg7GWH7PyiUAF4MeaLPvTkttRBgRRXP3c6bm.json  hzVonEju2nXLqzZFFDJWcmhAe57YYDMvxqR8yVvSZcw.json  hzWPRLtQdv8qMhiS9fm958dsfivS5z13apJdLhipeni.json  hzpmkpzUcCgk1V6X5z78y2aN3JyQe1Jj66TjkYaWei7.json  mnt2w8MHXpjVdZojvbsh6VEVy9FSw7MLU96GeRBxbxt.json  nVyjcxVWTddPkUF74VbrfByNKyGf2m3Kv4fmyQJNiyi.json  wallet-keypair (4).json  wallet-keypair.json
nft-meta-data-pointer/: Anchor.toml
nft-meta-data-pointer/programs/nft-meta-data-pointer/: Cargo.toml
nft-meta-data-pointer/programs/nft-meta-data-pointer/src/: lib.rs
nft-minter/: Anchor.toml
nft-operations/: Anchor.toml  jinbi.json  package.json
non-transferable/: Anchor.toml
pda-rent-payer/: Anchor.toml
permanent-delegate/: Anchor.toml
permanent-delegate/programs/permanent-delegate/: Cargo.toml
permanent-delegate/programs/permanent-delegate/src/: lib.rs
swap/: Anchor.toml
test/: Anchor.toml
token-2022/: Anchor.toml  tsconfig.json
token-fundraiser/: Anchor.toml
token-fundraiser/programs/token-fundraiser/: Cargo.toml
token-fundraiser/programs/token-fundraiser/src/: constants.rs  error.rs  lib.rs
token-fundraiser/programs/token-fundraiser/src/instructions/: checker.rs  contribute.rs  initialize.rs  refund.rs
token-fundraiser/programs/token-fundraiser/src/state/: fundraiser.rs
token-swap/: Anchor.toml
transfer/: Anchor.toml
transfer-fee/: Anchor.toml  package-lock.json
transfer-new/: Anchor.toml
voting-app/: Anchor.toml
work-project/: close_all_token_account.ts
(+221 files in other folders)
