[package]
name = "permanent-delegate"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "permanent_delegate"

[features]
default = []
custom-panic = []
custom-heap = []
anchor-debug = [] 
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive"] }
anchor-spl = "0.31.1"
spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"
